--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<!DOCTYPE html>
-<html>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+        "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>this is a template</title>
+    <link rel="stylesheet" type="text/css" href="/jpro/css/jpro.css">
+    <script src="/jpro/js/jpro.js" type="text/javascript"></script>
+</head>
 <body>
-<iframe src="https://murmuring-ocean-26968.herokuapp.com/"></iframe>
+<div>
+    <jpro-app loader="none" href="https://murmuring-ocean-26968.herokuapp.com/app/hellojpro" fullscreen="true" />
+</div>
 </body>
 </html>
