--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>this is a template</title>
-    <link rel="stylesheet" type="text/css" href="/jpro/css/jpro.css">
-    <script src="/jpro/js/jpro.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="https://murmuring-ocean-26968.herokuapp.com/app/hellojpro/jpro/css/jpro.css">
+    <script src="https://murmuring-ocean-26968.herokuapp.com/app/hellojpro/jpro/js/jpro.js" type="text/javascript"></script>
 </head>
 <body>
 <div>
