--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>this is a template</title>
-    <link href="/myFavicon.png" rel="icon">
-    <link rel="stylesheet" type="text/css" href="/css/jpro.css">
-    <script src="/js/jpro.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="jpro.css">
+    <script src="jpro.js" type="text/javascript"></script>
 </head>
 <body>
 <div>
